// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Hilo's screen destination action: all fields 1`] = `
Object {
  "event": Object {
    "anonymous_id": "lVjL7s!yRn*B1*Y[Aj",
    "contact_id": "lVjL7s!yRn*B1*Y[Aj",
    "name": "lVjL7s!yRn*B1*Y[Aj",
    "properties": Object {
      "testType": "lVjL7s!yRn*B1*Y[Aj",
    },
    "timestamp": Any<String>,
  },
}
`;

exports[`Testing snapshot for Hilo's screen destination action: required fields 1`] = `
Object {
  "event": Object {
    "timestamp": Any<String>,
  },
}
`;
